fix all errors according to practicum review, added button types, changed semantic HTML elements to H1, H2, removed absolute positioning from button

--- a/index.html
+++ b/index.html
@@ -24,15 +24,15 @@
                         alt="profile picture"
                         class="profile__avatar"/>
                     <div class="profile__info">
-                            <h2 class="profile__info-name">
+                            <h1 class="profile__info-name">
                                 Jacques Cousteau
-                                <button class="profile__info-button"></button>
-                            </h2>
+                                <button class="profile__info-button" type="button"></button>
+                            </h1>
                             <p class="profile__info-description">
                             Explorer
                         </p>
                     </div>
-                    <button class="profile__add"></button>
+                    <button class="profile__add" type="button"></button>
                 </section>
                 <section class="elements">
                     <ul class="elements__grid">
@@ -42,8 +42,8 @@
                                 alt="Yosemite Valley"
                                 class="card__image"/>
                             <div class="card__bottom">
-                                <p class="card__bottom-text">Yosemite Valley</p>
-                                <button class="card__bottom-button">
+                                <h2 class="card__bottom-text">Yosemite Valley</h2>
+                                <button class="card__bottom-button" type="button">
                                 </button>
                             </div>
                         </li>
@@ -53,8 +53,8 @@
                                 alt="Lake Louise"
                                 class="card__image"/>
                             <div class="card__bottom">
-                                <p class="card__bottom-text">Lake Louise</p>
-                                <button class="card__bottom-button">
+                                <h2 class="card__bottom-text">Lake Louise</h2>
+                                <button class="card__bottom-button" type="button">
                                 </button>
                             </div>
                         </li>
@@ -64,8 +64,8 @@
                                 alt="Bald Mountains"
                                 class="card__image"/>
                             <div class="card__bottom">
-                                <p class="card__bottom-text">Bald Mountains</p>
-                                <button class="card__bottom-button">
+                                <h2 class="card__bottom-text">Bald Mountains</h2>
+                                <button class="card__bottom-button" type="button">
                                 </button>
                             </div>
                         </li>
@@ -75,8 +75,8 @@
                                 alt="Latemar"
                                 class="card__image"/>
                             <div class="card__bottom">
-                                <p class="card__bottom-text">Latemar</p>
-                                <button class="card__bottom-button">
+                                <h2 class="card__bottom-text">Latemar</h2>
+                                <button class="card__bottom-button" type="button">
                                 </button>
                             </div>
                         </li>
@@ -86,8 +86,8 @@
                                 alt="Vanoise National Park"
                                 class="card__image"/>
                             <div class="card__bottom">
-                                <p class="card__bottom-text">Vanoise National Park</p>
-                                <button class="card__bottom-button">
+                                <h2 class="card__bottom-text">Vanoise National Park</h2>
+                                <button class="card__bottom-button" type="button">
                                 </button>
                             </div>
                         </li>
@@ -97,8 +97,8 @@
                                 alt="Lago di Braies"
                                 class="card__image"/>
                             <div class="card__bottom">
-                                <p class="card__bottom-text">Lago di Braies</p>
-                                <button class="card__bottom-button">
+                                <h2 class="card__bottom-text">Lago di Braies</h2>
+                                <button class="card__bottom-button" type="button">
                                 </button>
                             </div>
                         </li>
