--- a/index.html
+++ b/index.html
@@ -22,16 +22,10 @@
                     <div class="modal__container">
                         <button class="modal__container-exit" type="button"></button>
                         <h2 class="modal__container-title">Edit profile</h2>
-                        <form class="modal__form form">
+                        <form class="modal__form form" name="edit">
                             <fieldset class="form__fieldset">
-                                <div class="form__field">
-                                    <label class="form__label" for="name">Name</label>
-                                    <input class="form__input" id="name" type="text" required placeholder="Name">
-                                </div>
-                                <div class="form__field">
-                                    <label class="form__label" for="description">Description</label>
-                                    <input class="form__input" id="description" type="text" required placeholder="Description">
-                                </div>
+                                <input class="form__input" id="name" type="text" required placeholder="Name">
+                                <input class="form__input" id="description" type="text" required placeholder="Description">
                             </fieldset>
                             <button class="form__save" type="submit">Save</button>
                         </form>
