make all exit buttons have common class. Make new cards prepend instead of append. Clear old inputs on add card window after card is created. change variables to const. Make functions perform single tasks. get rid of handleModalToggle function for universal functions handleModalOpen and handleModalClose. Get rid of parentElement and use .closest() for functions. create separate function for createCard and prependCard.

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 </section>
                 <section class="modal" id="pictureModal">
                     <div class="modal__picture">
-                        <button class="modal__picture-exit" type="button" id="pictureExit"></button>
+                        <button class="modal__container-exit" type="button" id="pictureExit"></button>
                         <img 
                             src=" "
                             alt=" "
