--- a/index.html
+++ b/index.html
@@ -22,10 +22,12 @@
                     <div class="modal__container">
                         <button class="modal__container-exit" type="button" id="editExit"></button>
                         <h2 class="modal__container-title">Edit profile</h2>
-                        <form class="modal__form form" name="edit" id="editSubmit">
+                        <form class="modal__form form" name="edit" id="editSubmit" novalidate>
                             <fieldset class="form__fieldset">
-                                <input class="form__input" id="name" type="text" required placeholder="Name">
-                                <input class="form__input" id="description" type="text" required placeholder="Description">
+                                <input class="form__input" id="name__input" type="text" required placeholder="Name" minlength="2" maxlength="40">
+                                <span class="name__input-error form__input-error"></span>
+                                <input class="form__input" id="description__input" type="text" required placeholder="Description" minlength="2" maxlength="200">
+                                <span class="description__input-error form__input-error"></span>
                             </fieldset>
                             <button class="form__save" type="submit">Save</button>
                         </form>
@@ -35,10 +37,12 @@
                     <div class="modal__container">
                         <button class="modal__container-exit" type="button" id="addExit"></button>
                         <h2 class="modal__container-title">New place</h2>
-                        <form class="modal__form form" name="place" id="addSubmit">
+                        <form class="modal__form form" name="place" id="addSubmit" novalidate>
                             <fieldset class="form__fieldset">
-                                <input class="form__input" id="title" type="text" required placeholder="Title">
-                                <input class="form__input" id="link" type="text" required placeholder="Image link">
+                                <input class="form__input" id="title__input" type="text" required placeholder="Title" minlength="1" maxlength="30">
+                                <span class="title__input-error form__input-error"></span>
+                                <input class="form__input" id="link__input" type="url" required placeholder="Image link">
+                                <span class="link__input-error form__input-error"></span>
                             </fieldset>
                             <button class="form__save" type="submit">Create</button>
                         </form>
@@ -89,5 +93,6 @@
             </footer>
         </div>
         <script src="./scripts/index.js"></script>
+        <script src="./scripts/validate.js"></script>
     </body>
 </html>
