--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
                         <h2 class="modal__container-title">Edit profile</h2>
                         <form class="modal__form form" name="edit" id="editSubmit" novalidate>
                             <fieldset class="form__fieldset">
-                                <input class="form__input" id="name__input" type="text" required placeholder="Name" minlength="2" maxlength="40">
-                                <span class="name__input-error form__input-error"></span>
-                                <input class="form__input" id="description__input" type="text" required placeholder="Description" minlength="2" maxlength="200">
-                                <span class="description__input-error form__input-error"></span>
+                                <input class="form__input" id="name-input" type="text" required placeholder="Name" minlength="2" maxlength="40">
+                                <span class="name-input-error form__input-error"></span>
+                                <input class="form__input" id="description-input" type="text" required placeholder="Description" minlength="2" maxlength="200">
+                                <span class="description-input-error form__input-error"></span>
                             </fieldset>
                             <button class="form__save" type="submit">Save</button>
                         </form>
@@ -39,10 +39,10 @@
                         <h2 class="modal__container-title">New place</h2>
                         <form class="modal__form form" name="place" id="addSubmit" novalidate>
                             <fieldset class="form__fieldset">
-                                <input class="form__input" id="title__input" type="text" required placeholder="Title" minlength="1" maxlength="30">
-                                <span class="title__input-error form__input-error"></span>
-                                <input class="form__input" id="link__input" type="url" required placeholder="Image link">
-                                <span class="link__input-error form__input-error"></span>
+                                <input class="form__input" id="title-input" type="text" required placeholder="Title" minlength="1" maxlength="30">
+                                <span class="title-input-error form__input-error"></span>
+                                <input class="form__input" id="link-input" type="url" required placeholder="Image link">
+                                <span class="link-input-error form__input-error"></span>
                             </fieldset>
                             <button class="form__save" type="submit">Create</button>
                         </form>
