--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                 </section>
                 <section class="elements">
                     <ul class="elements__grid">
-                        <template id="card">
+                        <template id="card-template">
                             <li class="card">
                                 <button class="card__delete" type="button"></button>
                                 <img
@@ -92,7 +92,9 @@
                 <p class="footer__text">© 2022 Around The U.S.</p>
             </footer>
         </div>
-        <script src="./scripts/index.js"></script>
-        <script src="./scripts/validate.js"></script>
+        <script type="module" src="./scripts/index.js"></script>
+        <script type="module" src="./scripts/util.js"></script>
+        <script type="module" src="./scripts/Card.js"></script>
+        <script type="module" src="./scripts/FormValidator.js"></script>
     </body>
 </html>
